# eia3de

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
crates/hello/: Cargo.toml
crates/hello/src/: main.rs
devlog/: 0001-alternative-business-model.md  README.md
docs/: build.md  changelog.md
docs/devlog/: README.md
eia3de-client/: Cargo.toml
eia3de-client-desktop/: Cargo.toml
eia3de-client-desktop/src/: main.rs
eia3de-game-fortress/: Cargo.toml
eia3de-server/: Cargo.toml
eia3de_client/: Cargo.toml
eia3de_client/src/: graphics.rs  lib.rs  main.rs  specs.rs  windowing.rs
