[package]
name = "hello"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]

[dependencies.bevy]
version = "0.8"
features = [
    "dynamic",
    "wayland",
]

[dependencies.bevy_rapier3d]
version = "0.17"
features = [
    "parallel",
    "simd-nightly",
]
