[package]
name = "hello"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]

[dependencies.bevy]
version = "0.6"
features = [
    "dynamic",
    "wayland",
]

[dependencies.bevy_rapier3d]
version = "0.12"
features = [
    "parallel",
    "simd-nightly",
]
